kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  namespace: gha
spec:
  ingressClassName: traefik
  rules:
    - host: app.kptasznik.net
      http:
        paths:
          - backend:
              service:
                name: flask-service
                port:
                  number: 80
            path: /
            pathType: Prefix
